bynkc/tests/fixtures/negative/363_generic_non_record/input.bynk
commons bad

type Wrapped[T] = Int
